# pypsa-demand-response

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff.yaml
analysis/: base_results.ipynb  download_data.py  end_use_bar.ipynb  extract_results.py  heatmap.ipynb  marginal_cost_comparison.ipynb  marginal_costs.ipynb  nat_gas_utilization.ipynb  net_load_deviations.ipynb  net_loads.ipynb  other.ipynb  ramping.ipynb  sa.ipynb  scatter.ipynb  seasons.ipynb  utils.py
analysis/introduction/: buildings.ipynb  geospatial.ipynb
data/introduction/projections/: AEO_Electricity_Capacity.csv
data/introduction/regions/: regions_offshore_s70.geojson  regions_offshore_s70_4m.geojson  regions_onshore_s70.geojson  regions_onshore_s70_4m.geojson
data/introduction/regions/caiso/: regions_offshore_s80.geojson  regions_offshore_s80_4m.geojson  regions_onshore_s80.geojson  regions_onshore_s80_4m.geojson
data/introduction/regions/new_england/: regions_offshore_s120.geojson  (+3 more)
figures/introduction/: demand_response.drawio
introduction/: dr.ipynb  dsm.ipynb
notebooks/results/: results.py
notebooks/sample-data/: buildings.ipynb  dr.ipynb  dsm.ipynb
results/: capacity.py  constants.py  cost.py  extractor.py  main.py  peakiness.py  ramping.py  shed_days.py  shed_season.py  shift_season.py  utils.py
src/pypsadr/: __init__.py  capacity.py  constants.py  cost.py  demand_response.py  emissions.py  extractor.py  generation.py  main.py  net_load.py  peakiness.py  ramping.py  shed_days.py  shed_season.py  shift_season.py  utils.py
